--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+.env
+CSV/amazon_delivery.csv
+A_Crash_Course_in_Statistical_Learning/AutoML/Untitled.ipynb
+.gitignore
+.gitignore
+A_Crash_Course_in_Statistical_Learning/AutoML/.ipynb_checkpoints/AutoML_Basics_InnerWorkings_Interpretations-checkpoint.ipynb
